syntax = "proto3";

package payment;

import "../auth/user_token.proto";

service PaymentService {
    rpc CreatePaymentUrl(CreatePaymentUrlRequest) returns (CreatePaymentUrlResponse);
    rpc CallbackVnPay(CallbackVnpayRequest) returns (CallBackVnpayResponse);
}

message CreatePaymentUrlRequest {
    userToken.User user = 1;
    string payment_method_id = 2;
    float amount = 3; 
    repeated string order_products_id = 4;
    repeated string order_booking_id = 5;
    string description = 6;
    string vnp_return_url = 7;
} 

message CreatePaymentUrlResponse {
    string payment_url = 1;
}

message CallbackVnpayRequest {
    string vnp_Amount = 1;
    string vnp_BankCode = 2;
    string vnp_BankTranNo = 3;
    string vnp_CardType = 4;
    string vnp_OrderInfo = 5;
    string vnp_PayDate = 6;
    string vnp_ResponseCode = 7;
    string vnp_TmnCode = 8;
    string vnp_TransactionNo = 9;
    string vnp_TransactionStatus = 10;
    string vnp_TxnRef = 11;
    string vnp_SecureHash = 12;
}

message CallBackVnpayResponse {
    string message = 1;
    string status = 2;
}